Fix z-index on image

--- a/src/components/movielist.css
+++ b/src/components/movielist.css
@@ -126,7 +126,7 @@ margin-right: 15%;
 .movie-wrapper img {
   /* width:100%; 
   height: 100%; */
-  z-index: 2;
+  z-index: 1;
   height: 117px;
   width: 30%;
   border-radius: 10px 0 0 10px;
